section_3/istio-manifests/virtualservice-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leagueapp-services
spec:
  hosts:
  - "*"
  gateways:
  - leagueapp-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /bestposition
    - uri:
        exact: /table
    - uri:
        prefix: "/bestplayers/"
    - uri:
        exact: /createplayer
    - uri:
        prefix: "/deleteplayer/"
    - uri:
        exact: /transferplayer
    route:
    - destination:
        host: frontend-service
        port:
          number: 80
